<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    android:gravity="center" >
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/information_small"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_question" />

        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/information_small"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_slogan" />

        <Button
            android:id="@+id/button_welcome_first_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_guide"
            android:text="@string/welcome_button"/>
    </LinearLayout>
    

</LinearLayout>
